...
    
    <!-- Accessibility Service -->
    <string name="accessibility_service_description">Helps Monica find password fields for better autofill.</string>
    
    <!-- General -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    
    <!-- Swipe Actions -->
    <string name="swipe_action_select">Select</string>
    <string name="swipe_action_delete">Delete</string>
    
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="share">Share</string>
    <string name="field_action_more">More field actions</string>
...
